--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.19.6",
-    "prettier": "^3.2.5",
-    "ws": "^8.17.0"
+    "@reduxjs/toolkit": "2.2.5",
+    "preact": "10.22.0",
+    "prettier": "3.2.5",
+    "react-redux": "9.1.2",
+    "ws": "8.17.0"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.8.2",
-    "@types/ws": "^8.5.10",
-    "typescript": "^5.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
+    "@preact/preset-vite": "2.8.2",
+    "@types/ws": "8.5.10",
+    "typescript": "5.4.5",
     "vite": "5.2.0"
   }
 }
